<?xml version="1.0" encoding="utf-8"?><!--
  ~ MIT License
  ~
  ~ Copyright 2022 Soushi Atsumi
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMessageActivity">

    <TextView
        android:id="@+id/addressTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/address"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/addressesTableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:stretchColumns="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addressTextView">

        <TableRow>

            <TextView
                android:id="@+id/addressToTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_colon"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/addressToEditTextTextMessageAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="messageAddress"
                android:ems="10"
                android:hint="@string/address_To"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:onClick="addressToEditTextTextMessageAddressOnClick" />

            <Button
                android:id="@+id/chooseAddressToButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="chooseAddressToButtonOnClick"
                android:text="@string/choose_To"
                android:textAllCaps="false" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/addressCCTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CC_colon"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/addressCCEditTextTextMessageAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="messageAddress"
                android:ems="10"
                android:hint="@string/address_CC"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:onClick="addressCCEditTextTextMessageAddressOnClick" />

            <Button
                android:id="@+id/chooseAddressCCButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="chooseAddressCCButtonOnClick"
                android:text="@string/choose_CC"
                android:textAllCaps="false" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/addressBCCTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BCC_colon"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/addressBCCEditTextTextMessageAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="messageAddress"
                android:ems="10"
                android:hint="@string/address_BCC"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:onClick="addressBCCEditTextTextMessageAddressOnClick" />

            <Button
                android:id="@+id/chooseAddressBCCButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="chooseAddressBCCButtonOnClick"
                android:text="@string/choose_BCC"
                android:textAllCaps="false" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/subjectTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/title"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressesTableLayout" />

    <EditText
        android:id="@+id/subjectEditTextTextPersonName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/input_a_title"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subjectTextView" />

    <TextView
        android:id="@+id/bodyTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/body"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subjectEditTextTextPersonName" />

    <EditText
        android:id="@+id/bodyEditTextTextMultiLine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/input_a_body"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bodyTextView" />

    <Button
        android:id="@+id/doneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="0.5"
        android:onClick="doneButtonOnClick"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>